test/cases/05_resource-filtering.yaml
apiVersion: dr-syncer.io/v1alpha1
kind: Replication
metadata:
  name: resource-filtering-test
  namespace: dr-sync-test-case05
spec:
  sourceCluster: source-cluster
  destinationCluster: dest-cluster
  sourceNamespace: dr-sync-test-case05
  destinationNamespace: dr-sync-test-case05
  resourceTypes:
    - configmaps  # Only sync ConfigMaps
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: should-sync-configmap
  namespace: dr-sync-test-case05
data:
  key1: value1
  key2: value2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: should-not-sync-deployment
  namespace: dr-sync-test-case05
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
        - name: nginx
          image: nginx:latest
---
apiVersion: v1
kind: Service
metadata:
  name: should-not-sync-service
  namespace: dr-sync-test-case05
spec:
  selector:
    app: test-app
  ports:
    - name: http
      protocol: TCP
      port: "80"
      targetPort: "80"
